@@ -1,7 +1,9 @@
-MD5 28f00d27ba9faff6729fddb6e70d6e39 ChangeLog 2825
+MD5 0a0670988bb07cdf059bb3c9acc47097 ser-0.9.4.ebuild 3704
+MD5 4ca9857884641435321d614d84c3de13 ChangeLog 2936
 MD5 2a2bd6a0b90e271b49d8d55c60593062 ser-0.9.0.ebuild 3668
 MD5 731bfb3fccee7dbf639442d29948484c files/silomail-1.0-ser-0.9.0.diff 309
 MD5 f8bde4c96ce030c3857fcb596af4ef74 files/ser.confd 379
+MD5 2bb82ce57ef2641deb39ddc9f0792389 files/digest-ser-0.9.4 343
 MD5 6e319943ee713a85093870eb1c28a0d6 files/ldap-1.0-ser-0.9.0.diff 301
 MD5 16fc6b4f457162a12869d1ac72dc86f5 files/ser.rc6 549
 MD5 60e8a72a005fd298e920e6746c788980 files/ldaps-1.0-ser-0.9.0.diff 342
