@@ -1,0 +1,5 @@
+MD5 d12d56d76c86b59dd51a43b3251b7d3a ser-0.9.4_src.tar.gz 1888783
+MD5 4acc4f68df2894da79cbc4d697f22c8f silomail-1.0-ser-0.9.0.tar.gz 4762
+MD5 72ab86bde9715f4f712c5b6fb8909dd0 ethz-1.0-ser-0.9.0.tar.gz 5266
+MD5 f5741e12d060323eed40f1af978a1310 ldap-1.0-ser-0.9.0.tar.gz 5069
+MD5 b5500e4b2156eed20df1284e85190ae4 ldaps-1.0-ser-0.9.0.tar.gz 5051
