@@ -1,8 +1,7 @@
-MD5 0135230f588c672ad58675195625e655 ChangeLog 12049
+MD5 58bd47121490b4f4c0f326d5a157f0ce ChangeLog 12243
 MD5 420bb5bbf1253af5fd8dc56a60f6f092 wget-1.9.1-r5.ebuild 1613
-MD5 81244ebf1bb79594a8447e17f950d76a wget-1.9.1-r3.ebuild 1487
-MD5 247319ab51ca445c61dda6f3d17f5284 wget-1.10.ebuild 1548
 MD5 4740398a70e5b4cb49411e2fd4b657c3 metadata.xml 253
-MD5 94ce8e0557c28ef33d5814ab3dd34980 files/digest-wget-1.9.1-r3 135
+MD5 dff6929ea2cb95e6ff58f0581d6d85fb wget-1.10.ebuild 1684
 MD5 9da83719265c58f22ba93bcb2e8d299f files/digest-wget-1.9.1-r5 136
 MD5 52439ec5b3d6e3036e05677e93e647ed files/digest-wget-1.10 133
+MD5 8e4630728c37bc391e699cd91c848d5f files/wgetrc-ipv6 54
